--- a/client/client.jade
+++ b/client/client.jade
@@ -1,5 +1,5 @@
 head
-    title Nude Foods Market
+    title Boulder Creek Community
     meta(name='viewport', content='user-scalable=no, initial-scale=1.0, maximum-scale=1.0, width=device-width')
     meta(name='apple-mobile-web-app-capable', content='yes')
     meta(name='apple-mobile-web-app-status-bar-style', content='black')
@@ -9,22 +9,22 @@ head
     link(rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png")
 
     link(rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5")
-    meta(name="apple-mobile-web-app-title" content="Nude Foods")
-    meta(name="application-name" content="Nude Foods")
+    meta(name="apple-mobile-web-app-title" content="Boulder Creek Community")
+    meta(name="application-name" content="Boulder Creek Community")
     meta(name="msapplication-TileColor" content="#da532c")
     meta(name="theme-color" content="#ffffff")
     
     
     
     link(rel='stylesheet' type='text/css' href='https://cdn.jsdelivr.net/npm/fomantic-ui@2.7.4/dist/semantic.min.css')
-    link(href="https://fonts.googleapis.com/css?family=Varela+Round&display=swap" rel="stylesheet")
+    // link(href="https://fonts.googleapis.com/css?family=Varela+Round&display=swap" rel="stylesheet")
     link(href="https://fonts.googleapis.com/css?family=Ubuntu:300,400&display=swap" rel="stylesheet")
     link(rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png")
     link(rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png")
     link(rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png")
     link(rel="manifest" href="/site.webmanifest")
     link(href="https://cdn.jsdelivr.net/npm/suneditor@latest/dist/css/suneditor.min.css" rel="stylesheet")
-    link(rel='stylesheet', href='/layerslider/css/layerslider.css', type='text/css')
+    // link(rel='stylesheet', href='/layerslider/css/layerslider.css', type='text/css')
     // link(rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
     //     integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
     //     crossorigin="")
@@ -38,10 +38,10 @@ head
     //     crossorigin="")
     //- // External libraries: GreenSock
     // - /* script(src='/layerslider/js/jquery.js', type='text/javascript') */
-    script(src='/layerslider/js/greensock.js', type='text/javascript')
-    //- // LayerSlider script files
-    script(src='/layerslider/js/layerslider.transitions.js', type='text/javascript')
-    script(src='/layerslider/js/layerslider.kreaturamedia.jquery.js', type='text/javascript')
+    // script(src='/layerslider/js/greensock.js', type='text/javascript')
+    // //- // LayerSlider script files
+    // script(src='/layerslider/js/layerslider.transitions.js', type='text/javascript')
+    // script(src='/layerslider/js/layerslider.kreaturamedia.jquery.js', type='text/javascript')
 
     
     script(src="https://cdn.jsdelivr.net/npm/sweetalert2@9")
