--- a/parts/home.jade
+++ b/parts/home.jade
@@ -12,7 +12,7 @@ template(name='home')
         .one.column.row
             .column
                 img(src="https://img1.wsimg.com/isteam/ip/e8847b5c-4e57-4536-80f4-32e7c5632531/58d544a9-19ae-4844-a7b3-317a40a119a0.jpg/:/rs=h:500,cg:true,m")
-                .ui.dividing.header 
+                .ui.dividing.center.aligned.header 
                     |HAPPY LIVING AT BOULDER CREEK COMMUNITY CO-HOUSING
         .one.column.row
             .column
