--- a/parts/accounts/login.jade
+++ b/parts/accounts/login.jade
@@ -3,8 +3,10 @@ template(name='login')
         .centered.row
             .eight.wide.column
                 // img.ui.image(src="{{c.url 'kitchen_logo' gravity='face' crop='fill'}}")
-                img.ui.centered.image(src="https://nudefoodsmarket.com/wp-content/uploads/2021/03/logo-smaller-300x87.jpg")
-                .ui.center.aligned.header login
+                // img.ui.centered.image(src="https://nudefoodsmarket.com/wp-content/uploads/2021/03/logo-smaller-300x87.jpg")
+                .ui.center.aligned.header 
+                    |Boulder Creek Community
+                    |login
                 .ui.inline.small.header 
                     // +i name='user-male'
                     i.user.outline.icon
@@ -44,8 +46,9 @@ template(name='register')
     .ui.padded.stackable.grid
         .centered.middle.aligned.row
             .ten.wide.column
-                img.ui.centered.image(src="https://nudefoodsmarket.com/wp-content/uploads/2021/03/logo-smaller-300x87.jpg")
+                // img.ui.centered.image(src="https://nudefoodsmarket.com/wp-content/uploads/2021/03/logo-smaller-300x87.jpg")
                 h1.ui.center.aligned.header
+                    |Boulder Creek Community
                     +i name='user-add'
                     | register
                 .ui.inline.small.header 
