--- a/parts/post.jade
+++ b/parts/post.jade
@@ -178,22 +178,10 @@ template(name='post_view')
                         a.ui.header(href="/user/#{_author.username}") 
                             img.ui.avatar.image(src="{{c.url _author.profile_image_id height=200 width=200 gravity='face' crop='fill'}}" class=currentUser.invert_class)
                             |#{_author.username}
-                    .ui.small.grey.header 
-                        i.line.chart.icon
-                        |stats
-                    .ui.header  
-                        +i name='food-cart'
-                        | products
-                    div
-                    .ui.inline.header  
-                        +i name='cookbook'
-                        | recipes
-                    i.plus.link.icon.add_post_recipe
-                        
                     .ui.list
                         .item #{views} views
                     each viewers
-                        .ui.label #{username
+                        .ui.label #{username}
                     +array_view key='tags' label='tags' direct=true
                     +voting_full
                     //- +array_view key='location_tags' label='location_tags' direct=true
