--- a/parts/about.jade
+++ b/parts/about.jade
@@ -26,7 +26,7 @@ template(name='about')
                 |Boulder Creek Community was founded in 2007 by visionary Greg Sherwin who had a dream of creating a more affordable urban cohousing community in the heart of Boulder, Colorado. Greg traveled to 55 cohousing and intentional communities around the country researching his dream before settling on an unconventional model for Boulder Creek Community.
         .column
             img.ui.fluid.image(src="https://img1.wsimg.com/isteam/ip/e8847b5c-4e57-4536-80f4-32e7c5632531/b77d7acd-0f65-4031-9505-423b68c428bc.jpg/:/rs=w:538,h:269,cg:true,m/cr=w:538,h:269")
-    .ui.two.column.padded.grid
+    .ui.one.column.padded.grid
         .column
             |VISION AND MISSION STATEMENT
             |BCC VISION/MISSION/PURPOSE STATEMENT, 2018/19
@@ -51,7 +51,9 @@ template(name='about')
             |The central higher purpose and value of current Boulder Creek Community members is the intention and process of  individually and collectively deepening into our experience and expression of Resonance within and between ourselves.
             |Whenever and wherever we gather, we share this intention  and commitment to use each moment as an opportunity to become more resonant with ourselves and with each other regardless of the circumstances.
             |We recognize that this work, this opportunity, always begins with ourselves. Read More
-            |3. SERVICE:  We recognize that service is the “higher purpose” action that gives meaning to life. We are in love with the service based life. We are open to discovering ways that we might be in service to ourselves, the community, and the world at large through activities that work well in our lives. We recognize that acts of service are the proactive playground by which we, in community with others, explore and develop our capacities to be in resonance.  
+            .ui.small.header 
+                |3. SERVICE:  
+            |We recognize that service is the “higher purpose” action that gives meaning to life. We are in love with the service based life. We are open to discovering ways that we might be in service to ourselves, the community, and the world at large through activities that work well in our lives. We recognize that acts of service are the proactive playground by which we, in community with others, explore and develop our capacities to be in resonance.  
             |We recognize the importance of choosing community service* activities to engage in and share with others, that we agree is important, is a necessary ingredient to create a dynamic environment for the journey toward intimacy to show up.
             |*Service includes service in support of our personal growth, of other community members, community explorers, that larger community outside of BCC and our earth. 
             |CONNECTING WITH US: Are you interested in speaking with someone to discover your interest in being in this co-creative community? If, after reading the guiding statements above, you feel aligned with this vision and would like to explore possibilities, please reach out to us via the contact info below.
