--- a/parts/cars.jade
+++ b/parts/cars.jade
@@ -139,22 +139,21 @@ template(name='car_edit')
                         i.checkmark.big.icon
                     +text_edit key='title' label='title' direct=true
                     +image_edit key='image_id' label='image' direct=true
-                    +text_edit key='ready_in' label='ready in' direct=true icon='clock'
-                    +text_edit key='prep_time' label='prep time' direct=true icon='clock'
-                    +text_edit key='cook_time' label='cook time' direct=true icon='oven'
-                    +text_edit key='servings' label='servings' direct=true icon='users'
+                    +text_edit key='make' label='make' direct=true icon=''
+                    +text_edit key='model' label='model' direct=true icon=''
+                    +number_edit key='year' label='year' direct=true icon='users'
                     // +text_edit key='servings' label='servings' direct=true
                     +link_edit key='link' label='link' icon='link'
                     div
                 .ten.wide.column
                     div
-                    +textarea_edit key='description' label='description' direct=true
-                    +html_edit key='directions' label='directions' direct=true
+                    +html_edit key='description' label='description' direct=true
                     +array_edit key='tags' label='tags' icon='tags' direct=true
-                    +array_edit key='ingredients' label='ingredients' icon='tags' direct=true
-                    .ui.red.button.delete_car
-                        i.remove.icon   
-                        | delete
+                    // +array_edit key='ingredients' label='ingredients' icon='tags' direct=true
+                    if can_edit
+                        .ui.red.button.delete_car
+                            i.remove.icon   
+                            | delete
                 
                 
 template(name='car_view')
@@ -189,23 +188,18 @@ template(name='car_view')
                     each car_reviews
                         .ui.header #{when}
                     +comments
+                    .ui.header 
+                        i.clock.icon
+                        |reservations
                 .four.wide.column
-                    +text_view key='ready_in' label='ready in' direct=true
-                    +text_view key='prep_time' label='prep time' direct=true
-                    +text_view key='cook_time' label='cook time' direct=true
-                    +text_view key='servings' label='servings' direct=true
-                    +text_view key='servings' label='servings' direct=true
+                    +text_edit key='title' label='title' direct=true
+                    +image_edit key='image_id' label='image' direct=true
+                    +text_edit key='make' label='make' direct=true icon=''
+                    +text_edit key='model' label='model' direct=true icon=''
+                    +number_edit key='year' label='year' direct=true icon='users'
                     div
                     div
                     +html_view key='description' label='description' direct=true
-                    unless is_cook
-                        .ui.basic.button.mark_cook
-                            +i name='chef' cl='ui inline image'
-                            |I've cooked this
-                    else 
-                        .ui.basic.small.compact.button.unmark_cook
-                            i.grey.undo.icon
-                            |mark not cooked
                     each cook_ids
                         .ui.header #{this}
                     unless is_fav
